# skidder-python

./: .gitignore  README.md  pyproject.toml
novemberfive_logging/: __init__.py  _fields.py  _logger.py  _processors.py  decorator.py  logger.py
skidder/: __init__.py  _logger.py  _processors.py
tests/: test_logger.py
