[tool.poetry]
name = "logging-standard-python"
version = "2.0.1"
readme = "README.md"
license = "MIT"
description = "November Five Logging"
authors = ["November Five"]
packages = [
    { include = "novemberfive_logging" },
    { include = "novemberfive_logging/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "==21.1.0"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
tox = "*"
flake8 = "*"
pudb = "*"
black = "==18.9b0"
isort = "^4.3"
colorama = "^0.4.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
