[tool.poetry]
name = "skidder"
version = "3.1.0"
readme = "README.md"
license = "MIT"
description = "skidder"
authors = ["November Five"]
packages = [
    { include = "skidder" },
    { include = "skidder/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
structlog = "==21.1.0"


[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
tox = "*"
flake8 = "*"
pudb = "*"
black = "==18.9b0"
isort = "^4.3"
colorama = "^0.4.4"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
